<resources>
    <string name="app_name" translatable="false">CodingChallenge</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="forgot_pass">Olvidé mi contraseña</string>
    <string name="register">Registrarme</string>
    <string name="login">Ingresar</string>
    <string name="repeat_pass">Repetir contraseña</string>
    <string name="name">Nombre</string>
    <string name="lastname">Apellido</string>
    <string name="phone">Teléfono</string>
    <string name="register_title">Registro</string>
    <string name="continuar">Continuar</string>
    <string name="invalid_login">Los datos de acceso no son correctos.</string>
    <string name="error_conexion">No hay conexión a internet</string>
    <string name="codigo">Código</string>
    <string name="mail_code_hint" translatable="false">**********</string>
    <string name="code_mail_sent">Ingrese el código recibido en su dirección de email.</string>
    <string name="already_have_code">Ya tengo un código</string>
    <string name="confirm_email">Enviar código de confirmación</string>
    <string name="aceptar">Aceptar</string>
    <string name="error_proceso">No se pudo completar la acción. Inténtelo nuevamente más tarde.</string>
    <string name="pass_dont_match">Las contraseñas no coinciden</string>
    <string name="pass_min_lenght">La contraseña debe tener al menos 6 caracteres</string>
    <string name="logout">Cerrar sesión</string>
    <string name="birthdate_x">Fecha de nacimiento: %s</string>
    <string name="pictures_count_x">Cantidad de fotos: %d</string>
    <string name="new_patient">Nuevo paciente</string>
    <string name="edit_patient">Editar paciente</string>
    <string name="birthdate">Fecha de nacimiento</string>
    <string name="gender">Género</string>
    <string name="notes">Observaciones</string>
    <string name="save">Guardar</string>
    <string name="gender_masculine">Masculino</string>
    <string name="gender_femenine">Femenino</string>
    <string name="gender_x">Género: %s</string>
    <string name="date_creation_x">Fecha de alta: %s</string>
    <string name="last_picture_date_x">Última foto: %s</string>
    <string name="edit">Editar</string>
    <string name="send">Enviar</string>
    <string name="notes_x">Observaciones: %s</string>
    <string name="patient_title">Ficha de paciente</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="confirm_logout">¿Está seguro que desea cerrar sesión?</string>
    <string name="sesion_expired_msg">Su sesión ha expirado. Vuelva a ingresar su contraseña para continuar.</string>
    <string name="retry">Reintentar</string>
    <string name="exit">Salir</string>
    <string name="update_app_msg">Para continuar debe actualizar la aplicación.</string>
    <string name="update">Actualizar</string>
    <string name="recover_pass">Recuperar contraseña</string>
    <string name="email_invalido">Email inválido</string>
    <string name="password_changed">La contraseña se actualizó correctamente.</string>
    <string name="msg_no_patients">Aún no tiene pacientes cargados.\n\nPresione el botón "+" para agregar un nuevo paciente.</string>
    <string name="confirm_delete_patient">¿Desea eliminar el paciente?</string>
    <string name="delete">Eliminar</string>
    <string name="error_taking_picture_bitmap_creation">No se pudo guardar la foto. Error 1.</string>
    <string name="error_taking_picture_file_not_found">No se pudo guardar la foto. Error 2.</string>
    <string name="error_taking_picture_io">No se pudo guardar la foto. Error 3.</string>
    <string name="picture_name_1">Sonrisa</string>
    <string name="picture_name_2">Sonrisa con retractores</string>
    <string name="picture_name_3">Intraoral frontal</string>
    <string name="picture_name_4">Intraoral derecha</string>
    <string name="picture_name_5">Intraoral izquierda</string>
    <string name="picture_no_longer_available">La foto ya no está disponible.</string>
    <string name="confirm_share_patient">Los datos del paciente se enviarán al centro de diseño de First Fit. ¿Desea continuar?</string>
    <string name="foto_no_disponible">La foto no se encuentra disponible</string>
    <string name="share_needs_pictures">Para poder enviar la ficha del paciente debe tomar las dos primeras fotos.</string>
    <string name="enable_permission_in_settings">Se ha deshabilitado el permiso de la cámara. Debe habilitarlo en la configuración del dispositivo.</string>
    <string name="habilitar">Habilitar</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirm_delete_picture">¿Desea eliminar esta foto?</string>
    <string name="enviando_ficha">Espere por favor…</string>
    <string name="deleting_picture">Eliminando foto…</string>
    <string name="next">Siguiente</string>
    <string name="previous">Anterior</string>
    <string name="skip">Omitir</string>
    <string name="enter_mail_login_msg">Ingrese su email para autenticarse o\n comenzar el proceso de registro</string>
    <string name="date_creation">Fecha de alta</string>
    <string name="last_edition_x">Última modificación de datos: %s</string>
    <string name="last_sent_x">Último envío: %s</string>
    <string name="status_x">Estado: %s</string>
    <string name="nueva_foto">Nueva foto</string>
    <string name="enter_picture_name">Ingrese el nombre de la imagen</string>
    <string name="sin_plantilla">Sin plantilla</string>
    <string name="seleccionar_plantilla">Seleccionar plantilla</string>
    <string name="validar_codigo">Validar código</string>
</resources>