<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="12dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/dpt_btPicture1"
        android:background="?selectableItemBackground"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/thumb_picture_1" />
        <TextView
            android:layout_marginLeft="12dp"
            android:textColor="@color/primary_dark"
            android:fontFamily="sans-serif-medium"
            android:textSize="14sp"
            android:text="@string/picture_name_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/dpt_btPicture2"
        android:background="?selectableItemBackground"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/thumb_picture_2" />
        <TextView
            android:layout_marginLeft="12dp"
            android:textColor="@color/primary_dark"
            android:fontFamily="sans-serif-medium"
            android:textSize="14sp"
            android:text="@string/picture_name_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/dpt_btPicture3"
        android:background="?selectableItemBackground"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/thumb_picture_3" />
        <TextView
            android:layout_marginLeft="12dp"
            android:textColor="@color/primary_dark"
            android:fontFamily="sans-serif-medium"
            android:textSize="14sp"
            android:text="@string/picture_name_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/dpt_btPicture4"
        android:background="?selectableItemBackground"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/thumb_picture_4" />
        <TextView
            android:layout_marginLeft="12dp"
            android:textColor="@color/primary_dark"
            android:fontFamily="sans-serif-medium"
            android:textSize="14sp"
            android:text="@string/picture_name_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/dpt_btPicture5"
        android:background="?selectableItemBackground"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/thumb_picture_5" />
        <TextView
            android:layout_marginLeft="12dp"
            android:textColor="@color/primary_dark"
            android:fontFamily="sans-serif-medium"
            android:textSize="14sp"
            android:text="@string/picture_name_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/dpt_btPictureNoType"
        android:background="?selectableItemBackground"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:tint="@color/primary_dark"
            android:src="@drawable/ic_camera_circle" />
        <TextView
            android:layout_marginLeft="12dp"
            android:textColor="@color/primary_dark"
            android:fontFamily="sans-serif-medium"
            android:textSize="14sp"
            android:text="@string/sin_plantilla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>