<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainView"
    android:clipToPadding="false"
    android:background="@color/secondary_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/onb_mainCard"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginBottom="@dimen/vertical_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:paddingLeft="@dimen/horizontal_margin"
            android:paddingRight="@dimen/horizontal_margin"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/onb_imTop"
                android:layout_marginTop="16dp"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:src="@drawable/onboarding_0" />
            <TextView
                android:id="@+id/onb_txInfo"
                android:textSize="15dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textColor="@color/primary_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginBottom="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/onb_btSkip"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:strokeWidth="0dp"
                    android:text="@string/skip"
                    android:layout_width="wrap_content"
                    style="@style/ButtonStyle" />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/onb_btPrevious"
                    android:visibility="gone"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/previous"
                    android:layout_width="wrap_content"
                    style="@style/ButtonStyle" />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/onb_btNext"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/next"
                    android:layout_width="wrap_content"
                    style="@style/ButtonStyle" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>